styles.css
.loader {
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid #3498db;
    width: 120px;
    height: 120px;
    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance: textfield;
    appearance: none;
}

.infoArea {
    overflow: auto; 
    height: 400px; 
    width: 804px; 
    background-color:grey; 
    border: 6px solid black;
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.gameContainer {
    flex-grow: 1;
    width: 100%;
    max-height: 90px;
}

.blueTeam {
    background-color: aqua;
    border-right: 2px solid black;
    width: 392px;
    height: 100%;
    float: left;
    border-bottom: 4px solid black;
}

.redTeam {
    background-color: pink;
    border-left: 2px solid black;
    width: 392px;
    height: 100%;
    float: left;
    border-bottom: 4px solid black;
}

.redTeam p {
    margin-top: 0px;
    margin-bottom: 0px;
    display: inline-block;
    font-family: 'Fragment Mono';
}

.blueTeam p {
    margin-top: 0px;
    margin-bottom: 0px;
    display: inline-block;
    font-family: 'Fragment Mono';
}

.gameHead {
    background-color: grey;
    border-bottom: 4px solid black;
    border-top: 4px solid black;
    width: 100%;
    height: auto;
    text-align: center;
}

.gameHead h1 {
    color: white;
    font-size: 20px;
    font-display: bold;
    font-family: 'Fragment Mono';
    margin: 0px;
    letter-spacing: 4px;
}

p1 {
    color: white;
}

